<resources>
    <string name="app_name">ONE::Resident</string>
    <string name="title_activity_add">AddActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="street"><font color="#C20800">*</font>Улица</string>
    <string name="house"><font color="#C20800">*</font>Дом</string>
    <string name="surname"><font color="#C20800">*</font>Фамилия</string>
    <string name="name"><font color="#C20800">*</font>Имя</string>
    <string name="date"><font color="#C20800">*</font>Дата следующего платежа (дд.мм.гггг)</string>
    <string name="cost"><font color="#C20800">*</font>Стоимость арендной платы</string>

    <!-- ACTIVITY_ADD-->
    <string name="address_of_the_object">Адрес обьекта</string>
    <string name="tenant_data">Данные арендатора</string>
    <string name="rental_data">Данные об аренде</string>
    <string name="surname_defolt">Фамилия</string>
    <string name="house_defolt">Дом</string>
    <string name="street_defolt">Улица</string>
    <string name="name_defolt">Имя</string>
    <string name="date_defolt">Дата следующего платежа (дд.мм.гггг)</string>
    <string name="cost_defolt">Стоимость арендной платы</string>
    <string name="object">Название объекта</string>
    <string name="city">Город</string>
    <string name="level">Этаж</string>
    <string name="flat">Квартира</string>
    <string name="secondName">Отчёство</string>
    <string name="phone">Номер телефона</string>
    <string name="period">Период внесения арендной платы</string>
    <string name="comment">Комментарий</string>

    <!-- ACTIVITY_CHANGE-->
    <string name="make_changes">Внесите изменения</string>

    <!-- ACTIVITY_MAIN-->
    <string name="tenants">Арендаторы</string>
    <string name="payment">Оплата</string>
    <string name="payment_history">История оплаты</string>
    <string name="settings">Настройки</string>

    <!-- ACTIVITY_SETTINGS-->
    <string name="time_of_receipt">Время получения уведомлений (чч:мм)</string>
    <string name="time">12:00</string>

    <!-- BUTTON-->
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>




    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_payment">PaymentActivity</string>
</resources>