<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".residents.ChangeResidentActivity">

    <RelativeLayout
        android:layout_height="75dp"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButtonFromResidentActivity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#fafafa"
            android:onClick="goBack"
            app:srcCompat="@drawable/arrow2"
            tools:ignore="ContentDescription" />



        <ImageButton
            android:id="@+id/buttonAdd"
            android:onClick="acceptChanges"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#fafafa"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/save"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />

    </RelativeLayout>
    <ScrollView
        android:layout_marginTop="70dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMakeChanges"
                style="@style/header_section_changeRS"
                android:text="@string/make_changes" />

            <TextView
                android:id="@+id/textViewObject"
                style="@style/text_headerField"
                android:text="@string/object"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/textObject"
                style="@style/text_field"
                android:hint="@string/object"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                />

            <!-- CITY-->

            <TextView
                android:id="@+id/textViewCity"
                style="@style/text_headerField_changeRS"
                android:text="@string/city" />

            <EditText
                android:id="@+id/textCity"
                style="@style/text_field_changeRS"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <!-- STREET-->
            <TextView
                android:id="@+id/textViewStreet"
                style="@style/text_headerField_changeRS"
                android:text="@string/street" />

            <EditText
                android:id="@+id/textStreet"
                style="@style/text_field_changeRS"
                android:hint="@string/street_defolt"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <!-- HOUSE-->
            <TextView
                android:id="@+id/textViewHouse"
                style="@style/text_headerField_changeRS"
                android:text="@string/house" />

            <EditText
                android:id="@+id/textHouse"
                style="@style/text_field_changeRS"
                android:hint="@string/house_defolt"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <!-- LEVEL-->
            <TextView
                android:id="@+id/textViewLevel"
                style="@style/text_headerField_changeRS"
                android:text="@string/level" />

            <EditText
                android:id="@+id/textLevel"
                style="@style/text_field_changeRS"
                android:hint="@string/level"
                android:inputType="number"
                android:importantForAutofill="no"/>
            <!-- FLAT-->
            <TextView
                android:id="@+id/textViewFlat"
                style="@style/text_headerField_changeRS"
                android:text="@string/flat" />

            <EditText
                android:id="@+id/textFlat"
                style="@style/text_field_changeRS"
                android:hint="@string/flat"
                android:inputType="number"
                android:importantForAutofill="no" />

            <!-- SURNAME-->
            <TextView
                android:id="@+id/textViewSurname"
                style="@style/text_headerField_changeRS"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/textSurname"
                style="@style/text_field_changeRS"
                android:hint="@string/surname_defolt"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <!-- NAME-->
            <TextView
                android:id="@+id/textViewName"
                style="@style/text_headerField_changeRS"
                android:text="@string/name" />

            <EditText
                android:id="@+id/textName"
                style="@style/text_field_changeRS"
                android:hint="@string/name_defolt"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <!-- SECONDNAME-->
            <TextView
                android:id="@+id/textViewSecondName"
                style="@style/text_headerField_changeRS"
                android:text="@string/secondName" />

            <EditText
                android:id="@+id/textSecondName"
                style="@style/text_field_changeRS"
                android:hint="@string/secondName"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <!-- PHONE-->
            <TextView
                android:id="@+id/textViewPhone"
                style="@style/text_headerField_changeRS"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/textPhone"
                style="@style/text_field_changeRS"
                android:hint="@string/phone"
                android:inputType="phone"
                android:importantForAutofill="no" />
            <!-- DATE-->
            <TextView
                android:id="@+id/textViewDate"
                style="@style/text_headerField_changeRS"
                android:text="@string/date" />

            <EditText
                android:id="@+id/textDate"
                style="@style/text_field_changeRS"
                android:hint="@string/date_defolt"
                android:inputType="date"
                android:importantForAutofill="no" />
            <!-- PERIOD-->
            <TextView
                android:id="@+id/textViewPeriod"
                style="@style/text_headerField_changeRS"
                android:text="@string/period" />

            <EditText
                android:id="@+id/textPeriod"
                style="@style/text_field_changeRS"
                android:hint="@string/period"
                android:inputType="number"
                android:importantForAutofill="no" />
            <!-- PRICE-->
            <TextView
                android:id="@+id/textViewPrice"
                style="@style/text_headerField_changeRS"
                android:text="@string/cost" />

            <EditText
                android:id="@+id/textPrice"
                style="@style/text_field_changeRS"
                android:hint="@string/cost_defolt"
                android:inputType="number"
                android:importantForAutofill="no" />
            <!-- COMMENT-->
            <TextView
                android:id="@+id/textViewComment"
                style="@style/text_headerField_changeRS"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/textComment"
                style="@style/text_field_changeRS"
                android:layout_marginBottom="25dp"
                android:hint="@string/comment"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>