<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".residents.ResidentInfoActivity">

    <RelativeLayout
        android:layout_height="75dp"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButtonFromResidentActivity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#fafafa"
            android:onClick="goBack"
            app:srcCompat="@drawable/arrow2"
            tools:ignore="ContentDescription" />



        <ImageButton
            android:id="@+id/buttonAdd"
            android:onClick="changeResident"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#fafafa"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/edit"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />

    </RelativeLayout>
    <ScrollView
        android:layout_marginTop="70dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">
            <!-- header_ADDRESS-->
            <TextView
                android:id="@+id/textViewAddressHeader"
                style="@style/header_section"
                android:text="@string/address_of_the_object" />
            <!-- CITY-->
            <TextView
                android:id="@+id/textViewCity"
                style="@style/text_headerField_RS_info"
                android:text="@string/city" />
            <TextView
                android:id="@+id/textCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- STREET-->

            <TextView
                android:id="@+id/textViewStreet"
                style="@style/text_headerField_RS_info"
                android:text="@string/street_defolt" />
            <TextView
                android:id="@+id/textStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- HOUSE-->

            <TextView
                android:id="@+id/textViewHouse"
                style="@style/text_headerField_RS_info"
                android:text="@string/house_defolt" />
            <TextView
                android:id="@+id/textHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- LEVEL-->

            <TextView
                android:id="@+id/textViewLevel"
                style="@style/text_headerField_RS_info"
                android:text="@string/level" />
            <TextView
                android:id="@+id/textLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- FLAT-->

            <TextView
                android:id="@+id/textViewFlat"
                style="@style/text_headerField_RS_info"
                android:text="@string/flat" />
            <TextView
                android:id="@+id/textFlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- header_personalData-->
            <TextView
                android:id="@+id/textViewResidentHeader"
                style="@style/header_section"
                android:text="@string/tenant_data" />
            <!-- SURNAME-->

            <TextView
                android:id="@+id/textViewSurname"
                style="@style/text_headerField_RS_info"
                android:text="@string/surname_defolt" />
            <TextView
                android:id="@+id/textSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- NAME-->

            <TextView
                android:id="@+id/textViewName"
                style="@style/text_headerField_RS_info"
                android:text="@string/name_defolt" />
            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- SECONDNAME-->

            <TextView
                android:id="@+id/textViewSecondName"
                style="@style/text_headerField_RS_info"
                android:text="@string/secondName" />
            <TextView
                android:id="@+id/textSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- PHONE-->
            <TextView
                android:id="@+id/textViewPhone"
                style="@style/text_headerField_RS_info"
                android:text="@string/phone" />
            <TextView
                android:id="@+id/textPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <!-- header_RentalData-->
            <TextView
                android:id="@+id/textViewRentHeader"
                style="@style/header_section"
                android:text="@string/rental_data" />
            <!-- DATE-->

            <TextView
                android:id="@+id/textViewDate"
                style="@style/text_headerField_RS_info"
                android:text="@string/date_defolt" />
            <TextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- PERIOD-->

            <TextView
                android:id="@+id/textViewPeriod"
                style="@style/text_headerField_RS_info"
                android:text="@string/period" />
            <TextView
                android:id="@+id/textPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- PRICE-->
            <TextView
                android:id="@+id/textViewPrice"
                style="@style/text_headerField_RS_info"
                android:text="@string/cost_defolt" />
            <TextView
                android:id="@+id/textPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <!-- COMMENT-->
            <TextView
                android:id="@+id/textViewComment"
                style="@style/text_headerField_RS_info"
                android:text="@string/comment" />
            <TextView
                android:id="@+id/textComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/text_field_RS_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/defolt"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>