<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/backButtonFromSettingsActivity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="goBack"
            app:srcCompat="@drawable/arrow2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="#fafafa"
            tools:ignore="ContentDescription" />
        <!--Сделать прозрачность блока кнопок при скролинге -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/defout"
            android:onClick="acceptChanges"
            android:text="@string/save"
            android:textColor="@color/white"
            android:alpha="0.9"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <ScrollView
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:id="@+id/residentLinear"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settingsTextTime"
                style="@style/text_headerField"
                android:text="@string/time_of_receipt"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/settingsEditTime"
                style="@style/text_field"
                android:hint="@string/time"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>